# advent-of-code

./: .gitignore  LICENSE  Pipfile  README.md  aoc.py  aoc2.py  aoc3.py  aoc4.py  day19.py  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
2018/: day1.py  day2.py  day3.py
2020/: aoc.py  day1.py  day11.py  day12.py  day13.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2021/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day2.py  day20.py  day21.py  day22.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  test_day19.py
2021/data/: input7.txt
2023/: day2.py
advent_of_code/: core.py  debug.py  graph.py  math.py  other.py  point.py
numtools/: sample.py
test/: test_add_numbers.py
