[options]
packages = advent_of_code

[metadata]
name = local_advent_of_code
version = 1.0.0
url = https://github.com/tangarts/advent-of-code
author = tangarts
description = Advent of Code helpers
long_description = Advent of Code helpers 
license = MIT-License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries


[tool:pytest]
testpaths=test

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119
